finish loging page and it's functionality and now start work on main spotify page

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,10 @@
         <meta name="theme-color" content="#000000" />
         <meta name="description" content="Spotify Web Player" />
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;1,700&display=swap"
+            rel="stylesheet"
+        />
         <title>Spotify</title>
     </head>
 
